--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -135,6 +135,8 @@
         app:layout_constraintTop_toBottomOf="@+id/welcome_message"
         app:layout_constraintVertical_bias="0.813" />
 
+    <!--Create a button for each course -->
+
     <Button
         android:id="@+id/view_all_tests"
         android:layout_width="343dp"
